@@ -122,6 +122,7 @@ fixed formatting. Tomasz Flendrich
 * Fix bugs in tests/ntpd/ntp_prio_q.c.  Harlan Stenn.
 * gcc on older HPUX may need +allowdups.  Harlan Stenn.
 * Adding missing MCAST protection.  Harlan Stenn.
+* Disable certain test programs on certain platforms.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
